--- a/views/subtraction_form.erb
+++ b/views/subtraction_form.erb
@@ -1,1 +1,8 @@
 <h1>New subtraction</h1>
+<form action="/wizard_subtract">
+<label for="first_num">Subtract this:</label>
+<input id="first_num" type="text" name="first_number">
+<label for="second_num">from this:</label>
+<input id="second_num" type="text" name="second_number">
+<button>Subtract!</button>
+</form>
